name:                pinobot
version:             0.2.0.0
synopsis:            NetHack information IRC bot
description:         See README.md
homepage:            http://trankesbel.com/
license:             MIT
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikjuo@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type:     https
    location: https://github.com/UnNetHack/pinobot.git

library
  exposed-modules:     IRC.Bot
                       IRC.ConfigFile
                       IRC.Types
                       IRC.Socket
                       NetHack.Data.Dice
                       NetHack.Data.Monster
                       NetHack.Data.Variant
                       PinobotLogo
                       Terminal
  ghc-options:         -fwarn-incomplete-patterns -Wall
  hs-source-dirs:      lib
  build-depends:       ansi-terminal
                      ,base >=4.7.0.0 && <5.0.0.0
                      ,colour
                      ,exceptions
                      ,deepseq
                      ,text >=1.3
                      ,irc-client >=1.1.2.2 && <2.0
                      ,irc-ctcp
                      ,stm >= 2.4 && <3.0
                      ,containers >=0.5 && <1.0
                      ,optparse-applicative >=0.18
                      ,transformers >=0.3 && <1.0
                      ,bytestring >=0.11 && <1.0
                      ,network >=3 && <4
                      ,lens
                      ,pipes >=4.1 && <5.0
                      ,cereal >=0.4.1.1 && <1.0
                      ,cereal-text
                      ,time
                      ,toml-parser>=2.0.1.0
                      ,yaml >=0.8.10.1 && <1.0
                      ,zlib >=0.7
  default-language:    Haskell2010

executable pinobot-frontend
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -fwarn-incomplete-patterns -Wall -threaded
  build-depends:       base >=4.5.0.0 && <5.0.0.0
                      ,pinobot
                      ,text >=1.3
  default-language:    Haskell2010

executable pinobot-join
  hs-source-dirs:      commands
  main-is:             Join.hs
  ghc-options:         -fwarn-incomplete-patterns -Wall
  build-depends:       base, pinobot, text
  default-language:    Haskell2010

executable pinobot-part
  hs-source-dirs:      commands
  main-is:             Part.hs
  ghc-options:         -fwarn-incomplete-patterns -Wall
  build-depends:       base, pinobot, text
  default-language:    Haskell2010

executable pinobot-monsterdb
  hs-source-dirs:      monsterdb
  other-modules:       Bot
  main-is:             Main.hs
  ghc-options:         -fwarn-incomplete-patterns -Wall -threaded
  build-depends:       base >=4.5.0.0 && <5.0.0.0
                      ,containers
                      ,optparse-applicative >=0.18
                      ,pinobot
                      ,text >=1.3
                      ,transformers >=0.3 && <1.0
                      ,parsec >=3.1 && <4.0
  default-language:    Haskell2010

